# pylint-plugin-utils

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml  requirements_test.txt  requirements_test_min.txt  requirements_test_pre_commit.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml
pylint_plugin_utils/: __init__.py
tests/: conftest.py  test_linter_pickle.py
